--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,2 +1,11 @@
-<h1>HAI!</h1>
+<h1>Welcome to Action Cable Chat!</h1>
+Username: <input type="text" name="username"/>
+<a href="#" data-behavior="appear" class="appearance">Join</a>
 <a href="#" data-behavior="appear-away" class="appearance">Away</a>
+
+<h2>Users Chatting</h2>
+<ul class="user-list">
+  <% @users.each do |user| %>
+    <li><%= user.name %></li>
+  <% end %>
+</ul>
